Make sure we set default form type when installing printer.
Turn on some handy default permissions for all users.
Also provide option to reset form type at any time on Python and Perl
printer install.

--- a/ptrinstall/hpnpfparams.ui
+++ b/ptrinstall/hpnpfparams.ui
@@ -115,7 +115,7 @@
        <string>This file is used to supply macro names for SNMP variables</string>
       </property>
       <property name="text">
-       <string>SDATADIR/xtsnmpdef</string>
+       <string>SPROGDIR/xtsnmpdef</string>
       </property>
      </widget>
     </item>
@@ -135,7 +135,7 @@
        <string>This file is the SNMP operations control file</string>
       </property>
       <property name="text">
-       <string>SDATADIR/xtlhp-ctrl</string>
+       <string>SPROGDIR/xtlhp-ctrl</string>
       </property>
      </widget>
     </item>
